add map on game

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 				<key id="next"><img src="img/key.jpg" alt="key"></key>
 			</ul>
 		</ul>
+
+		<div id="map">
+			<img id="rdc" src="img/map/rdc.png" alt="rdc">
+		</div>
+
 		<div class="container">
 			<section id="intro">
 				<div class="section">
