--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
 			<img id="rdc" src="img/map/rdc.png" alt="rdc">
 		</div>
 
+		<div id="battlezone">
+			<ul id="battles">
+				<h2>Combat !</h2>
+				<li class="monster" id="one">
+					<img src="#" alt="#" class="#">
+					<span class="hit" id="idmonstre">Frapper !</span>
+					<div id="life" life="100"></div>
+				</li>
+			</ul>
+		</div>
+
 		<div class="container">
 			<section id="intro">
 				<div class="section">
@@ -64,16 +75,141 @@
 				</div>
 			</section>
 
-			<section id="one">
+			<!-- RDC -->
+			<section id="hall">
 				<div class="section">
-					Vous ouvez les yeux... Tout est noir autour de vous...
-					
-					
-					<button go="death">Crever</button>
-					<button go="exit">Vivre</button>
+					[...]
+					<button go="#">#</button>
 				</div>
 			</section>
 
+			<section id="corridor">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="room1">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="room2">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="diningroom">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="kitchen">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+			<!-- FIN RDC -->
+
+			<!-- LVL -1 -->
+			<section id="cave">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="cell2">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="cell8">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="stock">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="exit">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+			<!-- FIN LVL -1 -->
+
+			<!-- LVL +1 -->
+			<section id="reception">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="dancing">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="lab">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="lib">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="office">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+			<!-- FIN LVL +1 -->
+
+			<!-- LVL +2 -->
+			<section id="dungeon">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+
+			<section id="roof">
+				<div class="section">
+					[...]
+					<button go="#">#</button>
+				</div>
+			</section>
+			<!-- FIN LVL+2 -->
+
+			<!-- OTHER -->
 			<section id="exit">	
 				<div class="section" >
 					Vous voyez la lumière du jour... Vous avez réussi à vous échapper !
@@ -87,17 +223,10 @@
 					<button go="intro">Fin</button>
 				</div>
 			</section>
+			<!-- FIN OTRER -->
 
-			<div id="battlezone">
-				<ul id="battles">
-					<h2>Combat !</h2>
-					<li class="monster" id="one">
-						<img src="#" alt="#" class="#">
-						<span class="hit" id="idmonstre">Frapper !</span>
-						<div id="life" life="100"></div>
-					</li>
-				</ul>
-			</div>
+			
+
 		</div>
 	</body>
 
