fix cle pour aller vers hall

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					En voila un jeu qu'il est bien.	
 					<action name="start"></action>
 
-					<button go="one" door='next'>Commencer l'aventure !</button>
+					<button go="hall" door="next">Commencer l'aventure !</button>
 				</div>
 			</section>
 
