--- a/index.html
+++ b/index.html
@@ -184,15 +184,20 @@
 
 			<section id="stock">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					Il y a des caisses jusqu'au plafond, je dois être dans la reserve du chateau.
+					<button go="exit">Allez au fond de la reserve.</button>
+					<button go="cachot">Sortir d'ici.</button>
 				</div>
 			</section>
 
 			<section id="exit">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					Il fait tout noir.. "Aie !"<br>
+					C'est trés étroit ici.. monte-charge à l'air usé.<br>
+					Un escalier, ici ?
+					<button go="room2">Monter l'escalier secret.</button>
+					<button go="kitchen">Prendre le monte-charge.</button>
+					<button go="stock">Sortir d'ici.</button>
 				</div>
 			</section>
 			<!-- FIN LVL -1 -->
@@ -200,36 +205,49 @@
 			<!-- LVL +1 -->
 			<section id="reception">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					On approche du but, courage !<br>
+					On entends de la musique derrière la porte.. C'est curieux.
+					<button go="dancing">Allez à coté</button>
+					<button go="hall">Descendre dans le hall.</button>
 				</div>
 			</section>
 
 			<section id="dancing">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					Une salle de bal ! J'entends des rires mais il n'y a personne.. <br>
+					Je dois me dépècher de sortir d'ici.. Dracula..
+					<button go="lab">Entrer dans le laboratoire</button>
+					<button go="reception">Sortir d'ici.</button>
 				</div>
 			</section>
 
 			<section id="lab">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					Des étagère pleine de bocaux, mais qu'est ce que.. des têtes !<br>
+					Je ne devrais rien toucher ici.
+					<button go="lib">La bibliothèque est à coté.</button>
+					<button go="dancing">Sortir d'ici.</button>
 				</div>
 			</section>
 
 			<section id="lib">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					Un bibliothèque bien rempli.<br>
+					La porte du bureau a claqué, vite !<br>
+					<button go="cell2">Lire un livre.</button>
+					<button go="office">Allez dans le bureau.</button>
+					<button go="lab">Sortir d'ici.</button>
 				</div>
 			</section>
 
 			<section id="office">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					Il n'y a personne ici.. Il y a une porte avec une inscription.<br>
+					"..."<br>
+					Mais elle s'est éffacé..
+					<button go="dungeon">Ouvrir la porte du dungeon.</button>
+					<button go="office">Allez dans le bureau.</button>
+					<button go="lab">Sortir d'ici.</button>
 				</div>
 			</section>
 			<!-- FIN LVL +1 -->
@@ -237,15 +255,19 @@
 			<!-- LVL +2 -->
 			<section id="dungeon">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					J'approche du but.. Dracula est sur le toit !<br>
+					Si j'y vais je ne pourrais plus faire mechine arrière !
+					<button go="douve">Prendre le monte-charge.</button>
+					<button go="roof">Allez sur le toit.</button>
+					<button go="office">Sortir d'ici.</button>
 				</div>
 			</section>
 
 			<section id="roof">
 				<div class="section">
-					[...]
-					<button go="#">#</button>
+					<img src="img/monsters/dracula.jpg" alt="Dracula">
+					Dracula - Hahahaha tu as reussi à venir jusqu'à moi ! Dommage tu vas mourir !
+					Belmont - Tu vas voir Dracula, ton reigne est fini !
 				</div>
 			</section>
 			<!-- FIN LVL+2 -->
