--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					Le cadavre d'un homme gis sur le sol.. Il est mort depuis peu.<br>
 					Un calice sur la table est rempli de sang, Dracula n'est pas loin !
 					<button id="poison">Gouter le sang.</button>
-					<button id="corridor">Sortir d'ici.</button>
+					<button go="corridor">Sortir d'ici.</button>
 				</div>
 			</section>
 
