--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			</div>
 			<h3>Inventaire</h3>
 			<ul id="items">
-				<!-- <li id="name"><img src="#" alt="#"></li> -->
-				<key id="next"><img src="img/key.jpg" alt="key"></key>
+				<!-- <li id="name"><img src="#" alt="#"></li>
+				<key id="next"><img src="img/key.jpg" alt="key"></key> -->
 			</ul>
 		</ul>
 
@@ -42,7 +42,7 @@
 		<div id="battlezone">
 			<ul id="battles">
 				<h2>Combat !</h2>
-				<li class="monster" id="one">
+				<li id="monstre">
 					<img src="#" alt="#" class="#">
 					<span class="hit" id="idmonstre">Frapper !</span>
 					<div id="life" life="100"></div>
@@ -55,8 +55,8 @@
 				<div class="section">
 					<h2>Embrace of Dracula</h2>
 					<p>
-					En 1447, un comte nommé Dracula vivait dans un château sur les hauteurs du village de Sighișoara, en Transylvanie. Un siècle plus tard, une nuit ou les éclairs fendaient le ciel, le tombeau du comte Dracula fut frappé par la foudre. <br>
-					Depuis les disparitions successives de villageois aux alentours du château furent grandir les rumeurs à propos du comte.Un paysan vivant aux alentours du château assure qu’il peut apercevoir une lumière tout en haut du donjon avant chaque disparition. Certaine rumeur parle même que le comte serait en vie et qu’il se serait transformé en vampire. <br>
+					En 1447, un comte nommé Dracula vivait dans un château sur les hauteurs du village de Sighișoara, en Transylvanie. Un siècle plus tard, une nuit ou les éclairs fendaient le ciel, le tombeau du comte Dracula fut frappé par la foudre. <br><br>
+					Depuis les disparitions successives de villageois aux alentours du château furent grandir les rumeurs à propos du comte.Un paysan vivant aux alentours du château assure qu’il peut apercevoir une lumière tout en haut du donjon avant chaque disparition. Certaine rumeur parle même que le comte serait en vie et qu’il se serait transformé en vampire. <br><br>
 					Vous êtes Simon Belmont, fils de Sir Adrian Farenheights Tepes, et petit-fils du comte Dracula. Vous seul êtes capable de vaincre votre aïeul et sauver les habitants de Sighișoara. Armé d’une épée, votre aventure commence devant le château.
 					</p>
 					<action name="reset"></action>
