maj + slide + design

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</ul>
 
 		<div id="map">
-			<img id="rdc" src="img/map/rdc.png" alt="rdc">
+			<img id="start" src="img/map/rdc.png" alt="rdc">
 		</div>
 
 		<div id="battlezone">
@@ -50,27 +50,26 @@
 			</ul>
 		</div>
 
+		<div id="error">
+			<p>Error</p>
+			<button id="resume">Fermer</button>
+		</div>
+
 		<div class="container">
 			<section id="intro">
 				<div class="section">
-					<h2>Embrace of Dracula</h2>
-					<p>
-					En 1447, un comte nommé Dracula vivait dans un château sur les hauteurs du village de Sighișoara, en Transylvanie. Un siècle plus tard, une nuit ou les éclairs fendaient le ciel, le tombeau du comte Dracula fut frappé par la foudre. <br><br>
-					Depuis les disparitions successives de villageois aux alentours du château furent grandir les rumeurs à propos du comte.Un paysan vivant aux alentours du château assure qu’il peut apercevoir une lumière tout en haut du donjon avant chaque disparition. Certaine rumeur parle même que le comte serait en vie et qu’il se serait transformé en vampire. <br><br>
-					Vous êtes Simon Belmont, fils de Sir Adrian Farenheights Tepes, et petit-fils du comte Dracula. Vous seul êtes capable de vaincre votre aïeul et sauver les habitants de Sighișoara. Armé d’une épée, votre aventure commence devant le château.
-					</p>
+					<h1>Embrace of Dracula</h1>
 					<action name="reset"></action>
-					
 					<button go="start">Commencer l'aventure !</button>
 				</div>
 			</section>
 
 			<section id="start">
 				<div class="section">
-					<h2>START</h2>
-					En voila un jeu qu'il est bien.	
+					En 1447, un comte nommé Dracula vivait dans un château sur les hauteurs du village de Sighișoara, en Transylvanie. Un siècle plus tard, une nuit ou les éclairs fendaient le ciel, le tombeau du comte Dracula fut frappé par la foudre. <br><br>
+					Depuis les disparitions successives de villageois aux alentours du château furent grandir les rumeurs à propos du comte.Un paysan vivant aux alentours du château assure qu’il peut apercevoir une lumière tout en haut du donjon avant chaque disparition. Certaine rumeur parle même que le comte serait en vie et qu’il se serait transformé en vampire. <br><br>
+					Vous êtes Simon Belmont, fils de Sir Adrian Farenheights Tepes, et petit-fils du comte Dracula. Vous seul êtes capable de vaincre votre aïeul et sauver les habitants de Sighișoara. Armé d’une épée, votre aventure commence devant le château.
 					<action name="start"></action>
-
 					<button go="hall" door="next">Commencer l'aventure !</button>
 				</div>
 			</section>
