--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 		</div>
 
 		<div id="error">
-			<p>Error</p>
-			<button id="resume">Fermer</button>
+			<div class="box">
+				<p>Error</p>
+				<button id="resume">Fermer</button>
+			</div>
 		</div>
 
 		<div class="container">
@@ -169,7 +171,7 @@
 				<div class="section">
 					La cellule est vide, ça sent le pourri..<br>
 					Je vois quelque chose qui brille par terre.. <br>
-					<button id="reception">Remuer la poussière</button>
+					<button id="clue1">Remuer la poussière</button>
 					<button go="cachot">Sortir d'ici.</button>
 				</div>
 			</section>
