--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 			</ul>
 		</div>
 
+		<div id="battlezoneboss">
+			<ul id="battleboss">
+				<h2>Combat !</h2>
+				<li id="boss">
+					<img src="#" alt="#" class="#">
+					<span class="hit" id="idboss">Frapper !</span>
+					<div id="life" life="100"></div>
+				</li>
+			</ul>
+		</div>
 		<div id="error">
 			<div class="box">
 				<p>Error</p>
